# trade-lab

./: .gitignore  Cargo.toml  README.md  binance_orderbook_recorder.py  data_utils.py  feature-eda.ipynb  feature_target_eda.ipynb  hft_prediction.ipynb  hftbacktest-lab.ipynb  lab-binance.ipynb  lab-okx-bbo.ipynb  lab-okx-hftbacktest.ipynb  lab-okx-profile.ipynb  lab.ipynb  modeling_utils.py  orderbook_data_tools.py  requirements.txt  snapshot-eda.ipynb  strategies.py  utils.py
rust/data-runner/: Cargo.toml  README.md
rust/data-runner/src/: main.rs
rust/okx-features/src/: main.rs
rust/okx-orderbook-csv/: Cargo.toml
rust/okx-orderbook-csv/src/: main.rs
tests/: test_orderbook_data_tools.py
